name:                clock
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Manuel
maintainer:          m.a.n.u.e.l@posteo.net
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md
                     , README.md
cabal-version:       >= 1.10

data-files:            LICENSE
                       README.md
                       ChangeLog.md
                       data/clock.bmp
                       data/analog-clock.png
                       data/digital-clock.png

executable analog-clock
  main-is:             Analog.hs

  build-depends:       base >= 4.8
                       , gloss >= 1.10.1.1
                       , time >= 1.6.0.1
  
  default-language:    Haskell2010
  
executable digital-clock
  main-is:             Digital.hs

  build-depends:       base >= 4.8
                       , gloss >= 1.10.1.1
                       , time >= 1.6.0.1
  
  default-language:    Haskell2010
